/*-
 * #%L
 * TailoringExpert
 * %%
 * Copyright (C) 2022 Michael Bädorf and others
 * %%
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public
 * License along with this program.  If not, see
 * <http://www.gnu.org/licenses/gpl-3.0.html>.
 * #L%
 */
package eu.tailoringexpert.katalog;

import eu.tailoringexpert.domain.Datei;
import eu.tailoringexpert.domain.Katalog;
import eu.tailoringexpert.domain.KatalogAnforderung;

import java.util.Map;

public interface DokumentCreator {

    /**
     * Erzeugt einen druckbaren Gesamtkatalog.
     *
     * @param docId       zu verwendender Dokumentenidentifkator
     * @param katalog     Der Katalog, zu dem das Dokument erstellt werden soll
     * @param platzhalter Zusätzliche Parameter/Platzhalter, die nicht Teil des Projektphase sind
     * @return Druckbarer Dokument
     */
    Datei createDokument(String docId, Katalog<KatalogAnforderung> katalog, Map<String, String> platzhalter);
}
